--- a/ManyWords/Views/AnswerChoiceControl.xaml
+++ b/ManyWords/Views/AnswerChoiceControl.xaml
@@ -1,4 +1,4 @@
-﻿<UserControl x:Class="ManyWords.Views.AnswerChoiceControl"
+﻿<local:ExerciseControl x:Class="ManyWords.Views.AnswerChoiceControl"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
@@ -94,7 +94,7 @@
     <Grid x:Name="LayoutRoot">
         <Grid.RowDefinitions>
             <RowDefinition Height="Auto"/>
-            <RowDefinition Height="*"/>
+            <RowDefinition Height="Auto"/>
         </Grid.RowDefinitions>
 
         <Grid Grid.Row="0">
@@ -107,10 +107,16 @@
             
         </Grid>
 
-        <ListBox Grid.Row="1" Name="lstAnswers" ItemsSource="{Binding Answers}" 
+        <StackPanel Grid.Row="1" Orientation="Vertical">
+            <ListBox Name="lstAnswers" ItemsSource="{Binding Answers}" 
                      ItemContainerStyle="{StaticResource ListBoxAnswersViewStyle}" Margin="0,0,0,0" SelectionChanged="lstAnswers_SelectionChanged" />
 
-        <Rectangle Grid.Row="1" x:Name="rectHidden" Opacity="0.0" Fill="White" Visibility="Collapsed" Stroke="Transparent" Width="Auto" Height="800"/>
+            <TextBlock x:Name="txtTip" TextWrapping="Wrap" Margin="10,15,0,0"  Text="" Style="{StaticResource PhoneTextSubtleStyle}" />
 
+        </StackPanel>
+        
+        <Rectangle Grid.Row="1" Grid.RowSpan="3" x:Name="rectHidden" Opacity="0.0" Fill="White" Visibility="Collapsed" Stroke="Transparent" Width="Auto" Height="800"/>
+
+        
     </Grid>
-</UserControl>
+</local:ExerciseControl>
