--- a/ManyWords/Views/PresentWordControl.xaml
+++ b/ManyWords/Views/PresentWordControl.xaml
@@ -1,8 +1,9 @@
-﻿<UserControl x:Class="ManyWords.Views.PresentWordControl"
+﻿<local:ExerciseControl x:Class="ManyWords.Views.PresentWordControl"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-    xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"    
+    xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+    xmlns:local="clr-namespace:ManyWords.Views"
     mc:Ignorable="d"
     FontFamily="{StaticResource PhoneFontFamilyNormal}"
     FontSize="{StaticResource PhoneFontSizeNormal}"
@@ -14,6 +15,7 @@
             <RowDefinition Height="Auto"/>
             <RowDefinition Height="Auto"/>
             <RowDefinition Height="Auto"/>
+            <RowDefinition Height="Auto"/>            
         </Grid.RowDefinitions>
         
         <TextBlock Grid.Row ="0" Name="txtWord" Text="{Binding Word}" Margin="0,10,0,20"
@@ -22,6 +24,10 @@
         <TextBlock Grid.Row ="1" Name="txtTranslation" Text="{Binding Translation}" Margin="0,10,0,20"
                        FontSize="30" HorizontalAlignment="Left" FontStyle="Italic" />
 
+
+
+
+        
         <StackPanel Grid.Row ="2" Orientation="Horizontal" HorizontalAlignment="Center">
             <Button Content="Learn" Margin="0,0,0,0" HorizontalAlignment="Center" Click="LearnButton_Click" 
                     BorderBrush="{StaticResource PhoneAccentBrush}"
@@ -32,5 +38,8 @@
                     Background="{StaticResource PhoneAccentBrush}" />
         </StackPanel>
 
+        <TextBlock x:Name="txtTip" Grid.Row ="3" TextWrapping="Wrap" Margin="10,15,0,0"  Text="" Style="{StaticResource PhoneTextSubtleStyle}" />
+
+
     </Grid>
-</UserControl>
+</local:ExerciseControl>
