--- a/ManyWords/Views/ExtendedLanguageSelect.xaml
+++ b/ManyWords/Views/ExtendedLanguageSelect.xaml
@@ -6,6 +6,7 @@
     xmlns:shell="clr-namespace:Microsoft.Phone.Shell;assembly=Microsoft.Phone"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+    xmlns:Resources="clr-namespace:ManyWords"
     FontFamily="{StaticResource PhoneFontFamilyNormal}"
     FontSize="{StaticResource PhoneFontSizeNormal}"
     Foreground="{StaticResource PhoneForegroundBrush}"
@@ -15,14 +16,6 @@
     shell:SystemTray.IsVisible="False">
 
     <phone:PhoneApplicationPage.Resources>
-        <DataTemplate x:Name="LanguagePickerItemFullModeTemplate">
-            <StackPanel Orientation="Horizontal">
-                <Border Background="LightGreen" Width="34" Height="34">
-                    <TextBlock Text="{Binding HasVocabulary}" FontSize="16" HorizontalAlignment="Center" VerticalAlignment="Center"/>
-                </Border>
-                <TextBlock Text="{Binding Name}" Margin="12 0 0 0"/>
-            </StackPanel>
-        </DataTemplate>
     </phone:PhoneApplicationPage.Resources>
 
     <!--LayoutRoot is the root grid where all page content is placed-->
@@ -43,8 +36,8 @@
                 <RowDefinition Height="*"/>
                 <RowDefinition Height="Auto"/>
             </Grid.RowDefinitions>
-            
-            <ListBox Grid.Row="0" x:Name="lstLanguages" ItemTemplate="{StaticResource LanguagePickerItemFullModeTemplate}" />
+
+            <ListBox Grid.Row="0" x:Name="lstLanguages" ItemTemplate="{StaticResource LanguagePickerItemTemplate}" />
             
             <Button Grid.Row="1" x:Name="btnReady" Content="Select" Click="btnReady_Click" />
             
